<?xml version="1.0"?>
<package>
  <name>ros_arvi_gazebo</name>
  <version>0.0.1</version>
  <description>
	This is the configuration package for the robot ARVI in Gazebo simulator.
  </description>
  
  <maintainer email="bonghi@officinerobotiche.it">Raffaello Bonghi</maintainer>

  <license>BSD</license>
  <url type="bugtracker">https://github.com/rbonghi/ros_arvi_gazebo/issues</url>
  <url type="repository">https://github.com/rbonghi/ros_arvi_gazebo</url>
  <author email="bonghi@officinerobotiche.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_arvi_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>


</package>
